--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,7 +101,6 @@ allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
-allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -157,6 +156,7 @@ allow 154.16.116.61;
 allow 154.26.159.157;
 allow 156.229.232.101;
 allow 156.229.232.104;
+allow 156.229.232.108;
 allow 156.229.232.115;
 allow 156.229.232.54;
 allow 156.229.232.98;
@@ -671,7 +671,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.220;
+allow 198.167.206.195;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -1137,6 +1137,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1365,7 +1366,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1440,6 +1440,7 @@ allow 2a12:a800:2:1:45:138:16:239;
 allow 2a12:a800:2:1:45:138:16:240;
 allow 2a12:a800:2:1:45:138:16:248;
 allow 2a12:a800:2:1:45:138:16:42;
+allow 2a12:a800:2:1:45:138:16:70;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
@@ -1492,7 +1493,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1503,6 +1503,7 @@ allow 45.138.16.239;
 allow 45.138.16.240;
 allow 45.138.16.248;
 allow 45.138.16.42;
+allow 45.138.16.70;
 allow 45.138.16.76;
 allow 45.138.87.142;
 allow 45.141.215.110;
@@ -1647,6 +1648,7 @@ allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.56.50.166;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
