--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -12,6 +12,7 @@ set_real_ip_from 103.251.167.20;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
+set_real_ip_from 104.168.144.253;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -210,6 +211,7 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
@@ -248,6 +250,7 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 18.198.197.122;
+set_real_ip_from 184.75.223.235;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -814,6 +817,7 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.127.231;
 set_real_ip_from 208.85.20.67;
+set_real_ip_from 209.135.168.90;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.34.15;
@@ -877,6 +881,7 @@ set_real_ip_from 23.154.177.29;
 set_real_ip_from 23.154.177.30;
 set_real_ip_from 23.154.177.31;
 set_real_ip_from 23.154.177.7;
+set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.254;
@@ -914,6 +919,7 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
+set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
@@ -1015,6 +1021,7 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:5501:3000:1dc::2;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::171;
@@ -1522,6 +1529,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.128;
 set_real_ip_from 45.84.107.17;
