--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -209,6 +209,7 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -1112,7 +1113,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1163,6 +1163,7 @@ allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:64c0:11:0:be24:11ff:fe12:2ad2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1525,6 +1526,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
@@ -1559,7 +1561,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
