--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -330,7 +330,18 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
+deny 185.220.101.100;
+deny 185.220.101.101;
+deny 185.220.101.102;
+deny 185.220.101.103;
+deny 185.220.101.104;
+deny 185.220.101.105;
+deny 185.220.101.106;
+deny 185.220.101.107;
+deny 185.220.101.108;
+deny 185.220.101.109;
 deny 185.220.101.11;
+deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.129;
 deny 185.220.101.13;
@@ -471,6 +482,10 @@ deny 185.220.101.82;
 deny 185.220.101.83;
 deny 185.220.101.84;
 deny 185.220.101.9;
+deny 185.220.101.96;
+deny 185.220.101.97;
+deny 185.220.101.98;
+deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -658,7 +673,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.144.178.185;
 deny 198.144.178.187;
-deny 198.167.206.195;
+deny 198.167.206.146;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -1051,6 +1066,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -1317,6 +1333,21 @@ deny 2a0b:f4c2:3::82;
 deny 2a0b:f4c2:3::83;
 deny 2a0b:f4c2:3::84;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1547,6 +1578,7 @@ deny 45.95.169.130;
 deny 45.95.169.230;
 deny 45.95.169.255;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.30.188.218;
