--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,6 +117,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
@@ -218,7 +219,6 @@ allow 176.58.89.182;
 allow 176.65.138.250;
 allow 176.65.143.138;
 allow 176.97.114.202;
-allow 177.153.51.238;
 allow 178.162.175.5;
 allow 178.162.197.91;
 allow 178.17.170.144;
@@ -804,6 +804,7 @@ allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
+allow 2001:b011:4006:3514::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
@@ -1402,6 +1403,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
+allow 2a0f:85c1:356:5bdd::1;
 allow 2a0f:85c1:356:5f5a::1;
 allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
@@ -1629,6 +1631,7 @@ allow 62.182.84.146;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
+allow 65.87.7.22;
 allow 65.87.7.47;
 allow 66.146.193.33;
 allow 66.220.242.222;
