--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -117,6 +117,7 @@ deny 109.70.100.68;
 deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
+deny 114.35.245.150;
 deny 118.163.74.160;
 deny 121.127.37.151;
 deny 121.78.28.166;
@@ -218,7 +219,6 @@ deny 176.58.89.182;
 deny 176.65.138.250;
 deny 176.65.143.138;
 deny 176.97.114.202;
-deny 177.153.51.238;
 deny 178.162.175.5;
 deny 178.162.197.91;
 deny 178.17.170.144;
@@ -804,6 +804,7 @@ deny 2001:67c:e28:1::3;
 deny 2001:67c:e28:1::4;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
+deny 2001:b011:4006:3514::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
@@ -1402,6 +1403,7 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
+deny 2a0f:85c1:356:5bdd::1;
 deny 2a0f:85c1:356:5f5a::1;
 deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
@@ -1629,6 +1631,7 @@ deny 62.182.84.146;
 deny 64.190.76.2;
 deny 64.190.76.3;
 deny 64.190.76.4;
+deny 65.87.7.22;
 deny 65.87.7.47;
 deny 66.146.193.33;
 deny 66.220.242.222;
